--- a/uber-eats-clone/package.json
+++ b/uber-eats-clone/package.json
@@ -24,7 +24,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.5",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "firebase": "8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
